# rag-sbs

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  keys  keys2.md  podman-compose.yml  pyproject.toml
.github/: dependabot.yml
.streamlit/: config.toml
data/sample/: README.md
deploy/: Caddyfile  Caddyfile.react  DEPLOY-react.md  dedup_cron.sh  dedup_versions.sql
docs/: _config.yml  architecture.md  casos-de-uso.md  changelog.md  index.md  regulatorio.md  roadmap.md
docs/_includes/: head_custom.html
docs/_layouts/: default.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: Admin.tsx  App.tsx  Chat.tsx  Login.tsx  Logo.tsx  Mapa.tsx  Survey.tsx  Topicos.tsx  acronyms.ts  api.ts  index.css
scripts/lightsail/: backup-to-s3.sh  bootstrap.sh  setup-backup-cron.sh
scripts/migrate/: aws-to-gcp.sh
sql/migrations/: 001_init.sql  002_doc_sources.sql  003_graph.sql  004_background.sql  005_query_log.sql  006_users_feedback.sql  007_security.sql  008_pin_recovery.sql  009_conversations.sql  010_access_control.sql  011_feedback_limits.sql
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  acronyms.py  calculator_agent.py  memory_relevance.py  planner.py  query_rewriter.py  topic_router.py
src/api/: __init__.py  routes_analytics.py  routes_background.py  routes_conversations.py  routes_graph.py  routes_health.py  routes_ingest.py  routes_ingest_scan.py  routes_query.py  routes_users.py
src/core/: __init__.py  deps.py  logging_setup.py  security.py
src/graph/: __init__.py  builder.py  classifier.py  expander.py  exporter.py  extractor.py  repository.py  topics.py
src/ingestion/: __init__.py  background_worker.py  date_extractor.py  differ.py  downloader.py  models.py  pipeline.py  repository.py  scheduler.py  seed_catalog.py
src/ingestion/scrapers/: __init__.py  bcrp.py  (+2 more)
src/llm/: __init__.py  base.py  gemini.py  ollama.py
src/rag/: __init__.py  chunker.py  chunker_estructural.py  parser.py  query_profile.py  reranker.py  reranker_cohere.py  reranker_cross_encoder.py  reranker_llm.py
src/schemas/: __init__.py  query.py
src/scripts/: backfill_dates.py  detectar_derogaciones.py  seed_sources.py
src/storage/: __init__.py  conversations.py  feedback.py  object_store.py  pgvector_store.py  query_log.py  users.py
src/tools/: __init__.py  clasificacion.py  cronograma.py  provisiones.py  schemas.py
src/ui/: __init__.py  api_client.py  auth_ui.py  streamlit_app.py  styles.py
tests/: test_chunker.py  test_main.py
