[project]
name = "rag-sbs"
version = "0.1.0"
description = "RAG SBS Multiagente — Mesa Experta Regulatoria con Cerebro Digital"
authors = [{ name = "Eurrutia" }]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",          # File uploads en /v1/ingest

    # Settings + validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # DB
    "sqlalchemy>=2.0.35",
    "psycopg[binary,pool]>=3.2.3",
    "psycopg-pool>=3.2.0",
    "pgvector>=0.3.6",
    "alembic>=1.13.0",                   # Migrations (Sprint 2)

    # HTTP clients
    "httpx>=0.27.0",
    "tenacity>=9.0.0",                   # Retries

    # RAG
    "pymupdf>=1.24.0",                   # Parser principal (preserva tablas, mejor layout)
    "pypdf>=5.0.0",                      # Fallback parser
    "pytesseract>=0.3.10",               # OCR fallback para PDFs escaneados
    "Pillow>=10.0.0",                    # PIL para render de páginas a imagen

    # Cloud LLM providers
    "google-genai>=1.0.0",               # SDK oficial Google AI Studio (Gemini API)

    # Object storage (S3-compatible: AWS S3, GCS interop, MinIO)
    "boto3>=1.34.0",
    "tiktoken>=0.8.0",                   # Token counting

    # Cache
    "redis>=5.1.0",

    # Scheduler
    "apscheduler>=3.10.4",

    # Topic modeling (L2 del knowledge graph)
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",

    # UI conversacional
    "streamlit>=1.40.0",
    "altair>=5.5.0",
    "pandas>=2.2.0",

    # Observabilidad básica
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",                     # TestClient
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]                        # Line length manejada por formatter

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
